<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#61FFFFFF"
    tools:context=".ui.post.PostFragment">

<!--    <EditText-->
<!--        android:id="@+id/editWage"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="100dp"-->
<!--        android:layout_marginLeft="100dp"-->
<!--        android:layout_marginEnd="101dp"-->
<!--        android:layout_marginRight="101dp"-->
<!--        android:layout_marginBottom="37dp"-->
<!--        android:ems="10"-->
<!--        android:hint="                Wage"-->
<!--        android:inputType="number"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/editDateView"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <EditText-->
<!--        android:id="@+id/editTitle"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="66dp"-->
<!--        android:layout_marginLeft="66dp"-->
<!--        android:layout_marginTop="44dp"-->
<!--        android:layout_marginEnd="67dp"-->
<!--        android:layout_marginRight="67dp"-->
<!--        android:ems="10"-->
<!--        android:hint="            Task Title"-->
<!--        android:inputType="textPersonName"-->
<!--        android:textSize="24sp"-->
<!--        android:verticalScrollbarPosition="right"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <Button-->
<!--        android:id="@+id/editBtn"-->
<!--        android:layout_width="118dp"-->
<!--        android:layout_height="65dp"-->
<!--        android:layout_marginStart="146dp"-->
<!--        android:layout_marginLeft="146dp"-->
<!--        android:layout_marginEnd="147dp"-->
<!--        android:layout_marginRight="147dp"-->
<!--        android:layout_marginBottom="60dp"-->
<!--        android:text="EDIT"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <EditText-->
<!--        android:id="@+id/editDescription"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="236dp"-->
<!--        android:layout_marginStart="55dp"-->
<!--        android:layout_marginLeft="55dp"-->
<!--        android:layout_marginTop="32dp"-->
<!--        android:layout_marginEnd="56dp"-->
<!--        android:layout_marginRight="56dp"-->
<!--        android:layout_marginBottom="39dp"-->
<!--        android:ems="10"-->
<!--        android:gravity="start|top"-->
<!--        android:hint="\n\n\n\n                  Description"-->
<!--        android:inputType="textMultiLine"-->
<!--        android:textSize="20sp"-->
<!--        android:typeface="normal"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/editWage"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/editTitle" />-->

<!--    <TextView-->
<!--        android:id="@+id/editDateView"-->
<!--        android:layout_width="164dp"-->
<!--        android:layout_height="32dp"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:layout_marginLeft="20dp"-->
<!--        android:layout_marginEnd="101dp"-->
<!--        android:layout_marginRight="101dp"-->
<!--        android:layout_marginBottom="72dp"-->
<!--        android:enabled="false"-->
<!--        android:hint="       Date"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/editBtn"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/editSelectDate" />-->

<!--    <Button-->
<!--        android:id="@+id/editSelectDate"-->
<!--        android:layout_width="90dp"-->
<!--        android:layout_height="54dp"-->
<!--        android:layout_marginStart="36dp"-->
<!--        android:layout_marginLeft="36dp"-->
<!--        android:layout_marginTop="115dp"-->
<!--        android:layout_marginBottom="188dp"-->
<!--        android:text="Select Date"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/editDescription" />-->

<!--    <TextView-->
<!--        android:id="@+id/editStatus"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="76dp"-->
<!--        android:layout_marginRight="76dp"-->
<!--        android:layout_marginBottom="317dp"-->
<!--        android:background="#8A8787"-->
<!--        android:text="TextView"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->
    <EditText
        android:id="@+id/editWage"
        android:layout_width="205dp"
        android:layout_height="35dp"
        android:background="@drawable/search_view_shape"
        android:ems="10"
        android:hint=" Wage"
        android:inputType="number"
        android:queryBackground="@null"
        android:submitBackground="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/search_view_shape"
        android:ems="10"
        android:hint="            Task Title"
        android:inputType="textPersonName"
        android:queryBackground="@null"
        android:submitBackground="@null"
        android:textSize="24sp"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="288dp"
        android:layout_height="80dp"
        android:text="EDIT"
        app:backgroundTint="#FF32A79D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="300dp"
        android:layout_height="236dp"
        android:background="@drawable/search_view_shape"
        android:ems="10"
        android:gravity="start|top"
        android:hint="\n\n\n\n                  Description"
        android:inputType="textMultiLine"
        android:queryBackground="@null"
        android:submitBackground="@null"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003" />

    <TextView
        android:id="@+id/editDateView"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:background="@drawable/search_view_shape"
        android:enabled="false"
        android:hint=" Date"
        android:queryBackground="@null"
        android:submitBackground="@null"

        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <Button
        android:id="@+id/editSelectDate"
        android:layout_width="90dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="Select"
        app:backgroundTint="#FF32A79D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editDateView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <TextView
        android:id="@+id/editStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:layout_marginBottom="317dp"
        android:text="TextView"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>