...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/quick_cash" />

    <ImageView
        android:id="@+id/Login"
        android:layout_width="282dp"
        android:layout_height="79dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...

    <ImageView
        android:id="@+id/lockIcon"
        android:layout_width="38dp"
        android:layout_height="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@mipmap/lock_icon" />

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="38dp"
        android:layout_height="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/userName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59000003"
        app:srcCompat="@mipmap/user_icon" />

    <EditText
        android:id="@+id/userName"
...
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="110dp"
        android:layout_height="65dp"
        android:text="Log In"
        app:backgroundTint="#FF32A79D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
